tag:angular-forms-complete

--- a/django_ecommerce/static/css/mec.css
+++ b/django_ecommerce/static/css/mec.css
@@ -83,3 +83,20 @@ h2,
   min-width: 100%;
   min-height: 100px;
 }
+
+input.ng-dirty.ng-valid { border:1px solid Green; }
+input.ng-dirty.ng-invalid { border:1px solid Red; }
+
+.custom-error {
+  color:#FF0000;
+  font-family: sans-serif;
+}
+
+.error-text {
+  color:black;
+  font-family: sans-serif !important;
+}
+
+.alert { 
+  border:1px solid Red;
+  background-color: pink;
