tag: angular-forms-ex3 all done

--- a/django_ecommerce/templates/payments/sign_in.html
+++ b/django_ecommerce/templates/payments/sign_in.html
@@ -6,7 +6,7 @@
 {% block content %}
    <section class="container">
       <form accept-charset="UTF-8" action="{% url 'sign_in' %}" 
-	            class="form-signin" role="form" method="post">{% csrf_token %}
+        name="{{form_name}}"  class="form-signin" role="form" method="post">{% csrf_token %}
 	<h2 class="form-signin-heading">Sign in</h2>
         {% if form.is_bound and not form.is_valid %}
         <div class="alert-message block-message error">
