tag: mongo_firstmap got basic usermap loading, now to

--- a/django_ecommerce/static/css/mec.css
+++ b/django_ecommerce/static/css/mec.css
@@ -100,3 +100,6 @@ input.ng-dirty.ng-invalid { border:1px solid Red; }
 .alert { 
   border:1px solid Red;
   background-color: pink;
+}
+
+.angular-google-map-container { height: 400px; }
