--- a/_chapters/chp08/django_ecommerce/templates/index.html
+++ b/_chapters/chp08/django_ecommerce/templates/index.html
@@ -41,4 +41,30 @@
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </section>
 
+    <br><br>
+
+    <section class="container marketing">
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="{% static 'img/yoda.jpg' %}" width="140" height="140" alt="Generic placeholder image">
+          <h2>Hone your Jedi Skills</h2>
+          <p>All members have access to our unique training and achievements ladders. Show off your Star Wars skills, progress through the levels and show everyone who the top Jedi Master is! </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="{% static 'img/clone_army.jpg' %}" width=140 height=140 alt="Clone Army">
+          <h2>Build your Clan</h2>
+          <p>Engage in meaningful conversation, or bloodthirsty battle!  If it's related to Star Wars you better believe we do it here. :)</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="{% static 'img/leia.jpg' %}" width=140 height=140 alt="Leia">
+          <h2>Find Love</h2>
+          <p>Everybody knows Star Wars fans are the best mates for Star Wars fans. Find your Princess Leia or Han Solo and explore the stars together.</p>
+          <p><a class="btn btn-default" href="#" role="button">Sign Up Now &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div> <!-- /.row -->
+    </section>
+
 {% endblock %}
