--- a/_chapters/chp08/django_ecommerce/templates/payments/edit.html
+++ b/_chapters/chp08/django_ecommerce/templates/payments/edit.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "__base.html" %}
 {% block content %}
   <div class="row">
     <div class="span6 columns">
@@ -14,5 +14,5 @@
       {% include "cardform.html" %}
       </form>
     </div>
-  </div>  
+  </div>
 {% endblock %}
