--- a/_chapters/chp08/django_ecommerce/templates/__base.html
+++ b/_chapters/chp08/django_ecommerce/templates/__base.html
@@ -12,6 +12,8 @@
     <link href= "{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <!-- custom styles -->
     <link href= "{% static "css/mec.css" %}" rel="stylesheet">
+    {% block extra_css %}
+    {% endblock %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,7 +25,7 @@
   <body>
 
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-      <div class="container">
+      <div class="container" max-width: 960px;>
         <header class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
