--- a/_chapters/chp08/django_ecommerce/templates/main/index.html
+++ b/_chapters/chp08/django_ecommerce/templates/main/index.html
@@ -1,11 +1,12 @@
-{% extends 'base.html' %}
+{% extends "__base.html" %}
 
  {% block content %}
 
     {% load static %}
-    {% load marketing %}
+    {% load main_marketing %}
 
-    <section id="myCarousel" class="carousel slide" data-ride="carousel">
+    <center>
+    <section id="myCarousel" class="carousel slide" data-ride="carousel" style="max-width: 960px;">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -14,15 +15,20 @@
       </ol>
       <div class="carousel-inner">
         <figure class="item active">
-          <img src="{% static 'img/darth.jpg' %}" alt="Join the Dark Side">
-          <figcaption class="carousel-caption">
-            <h1>Join the Dark Side</h1>
-            <p>Or the light side. Doesn't matter. If your into Star Wars then this is the place for you.</p>
-            <p><a class="btn btn-lg btn-primary" href="{% url 'register' %}" role="button">Sign up today</a></p>
-          </figcaption>
+          <img src="{% static 'img/darth.jpg' %}" alt="Join the Dark Side" style="max-height: 540px;">
+            <figcaption class="carousel-caption visible-lg-block" id="darth_caption">
+              <h1>Join the Dark Side</h1>
+              <p>Or the light side. Doesn't matter. If your into Star Wars then this is the place for you.</p>
+              <p><a class="btn btn-lg btn-primary" href="{% url 'register' %}" role="button">Sign up today</a></p>
+            </figcaption>
+            <figcaption class="carousel-caption hidden-lg">
+              <h1>Join the Dark Side</h1>
+              <p>Or the light side. Doesn't matter. If your into Star Wars then this is the place for you.</p>
+              <p><a class="btn btn-lg btn-primary" href="{% url 'register' %}" role="button">Sign up today</a></p>
+            </figcaption>
         </figure>
         <figure class="item">
-          <img src="{% static 'img/star-wars-battle.jpg' %}" alt="Wage War">
+          <img src="{% static 'img/star-wars-battle.jpg' %}" alt="Wage War" style="max-height: 540px;">
           <figcaption class="carousel-caption">
             <h1>Wage War</h1>
             <p>Daily chats, Weekly Gaming sessions, Monthly real-life battle re-inactments.</p>
@@ -30,7 +36,7 @@
           </figcaption>
         </figure>
         <figure class="item">
-          <img src="{% static 'img/star-wars-cast.jpg' %}" alt="Meet People">
+          <img src="{% static 'img/star-wars-cast.jpg' %}" alt="Meet People" style="max-height: 540px;">
           <figcaption class="carousel-caption">
             <h1>Meet fellow Star Wars Fans</h1>
             <p>Join forces with fellow padwans and Jedi who lives near you.</p>
@@ -41,17 +47,14 @@
       <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </section>
+     </center>
 
     <br><br>
 
     <section class="container marketing">
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        {% circle_header_item img_name="yoda.jpg" heading="Hone your Jedi Skills" caption="All members have access to our unique training and achievements ladders. Show off your Star Wars skills, progress through the levels and show everyone who the top Jedi Master is!" %}
-
-        {% circle_header_item img_name="clone_army.jp" heading="Build your Clan" caption="Engage in meaningful conversation, or bloodthirsty battle! If it's related to Star Wars you better believe we do it." %}
-
-        {% circle_header_item img_name="leia.jpg" heading="Find Love" caption="Everybody knows Star Wars fans are the best mates for Star Wars fans. Find your Princess Leia or Han Solo and explore the stars together." button_title="Sign Up Now" %}
+        {% marketing__circle_item %}
       </div>
     </section>
 
