--- a/_chapters/chp09/django_ecommerce/static/css/mec.css
+++ b/_chapters/chp09/django_ecommerce/static/css/mec.css
@@ -52,3 +52,15 @@ h1, .nav li, .navbar-brand {
   margin-right: 0px;
   margin-top: -20px;
 }
+
+.full-image {
+  overflow: hidden;
+}
+
+.full-image img {
+  position: relative;
+  display: block;
+  margin: auto;
+  min-width: 100%;
+  min-height: 100px;
+}
