--- a/_chapters/chp09/django_ecommerce/templates/main/user.html
+++ b/_chapters/chp09/django_ecommerce/templates/main/user.html
@@ -1,15 +1,20 @@
 {% extends "__base.html" %}
 {% load staticfiles %}
 {% block content %}
+<div id="achievements" class="row member-page hide">
+  {% include "main/_badges.html" %}
+</div>
   <div class="row member-page">
     <div class="col-sm-8">
       <div class="row">
-
+        {% include "main/_announcements.html" %}
+        {% include "main/_lateststatus.html" %}
       </div>
     </div>
     <div class="col-sm-4">
      <div class="row">
        {% include "main/_jedibadge.html" %}
+       {% include "main/_statusupdate.html" %}
      </div>
     </div>
   </div>
