tag:mongo_complete got mongo stuff working

--- a/django_ecommerce/templates/payments/register.html
+++ b/django_ecommerce/templates/payments/register.html
@@ -24,4 +24,5 @@
 
 {% block extrajs %}
     <script src="{% static "js/registerCtrl.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/userMapCtrl.js" %}" type="text/javascript"></script>
 {% endblock %}
