finished mongo chapter

--- a/django_ecommerce/templates/usermap/usermap.html
+++ b/django_ecommerce/templates/usermap/usermap.html
@@ -5,7 +5,7 @@
 <div ng-controller="UserMapCtrl">
   <google-map center="map.center" zoom="map.zoom"  options="map.options">
 
-  <markers models="locs" coords="'location'" idKey="'mappoint_id'" icon="'icon'" click="'onClicked'">
+  <markers models="locs" coords="'location'" idKey="'mappoint_id'">
       </markers>
   
   </google-map>
