--- a/_chapters/_chp09/django_ecommerce/templates/payments/edit.html
+++ b/_chapters/_chp09/django_ecommerce/templates/payments/edit.html
@@ -11,7 +11,7 @@
     <div class="span6 columns">
       <form id="user_form" accept-charset="UTF-8" action="{% url 'edit' %}" class="form-stacked"  method="post">
       {% csrf_token %}
-      {% include "cardform.html" %}
+      {% include "payments/_cardform.html" %}
       </form>
     </div>
   </div>
