--- a/_chapters/_chp10/django_ecommerce/templates/main/index.html
+++ b/_chapters/_chp10/django_ecommerce/templates/main/index.html
@@ -53,7 +53,7 @@
 
     <section class="container marketing">
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <div class="row center-text">
         {% marketing__circle_item %}
       </div>
     </section>
