added rest chapter

--- a/_chapters/chp10/django_ecommerce/templates/__base.html
+++ b/_chapters/chp10/django_ecommerce/templates/__base.html
@@ -56,10 +56,11 @@
       {% block content %}
       {% endblock %}
 
+      <hr class="featurette-divider">
 
       <footer>
-        <p class="pull-right"><a href="">Back to top</a></p>
-        <p class="pull-left">&copy; 2014 <a href="http://j1z0.com">The Jedi Council</a></p> <p class="text-center"> &middot;  Powered by about 37 AT-AT Walkers, Python 3 and Django 1.7 &middot; </p>
+        <p class="pull-right"><a href="/#">Back to top</a></p>
+        <p class="pull-left">&copy; 2014 <a href="http://realpython.com">The Jedi Council</a></p> <p class="text-center"> &middot;  Powered by about 37 AT-AT Walkers, Python 3 and Django 1.7 &middot; </p>
       </footer>
 
     </div>
@@ -68,5 +69,6 @@
     <script src="{% static "js/jquery-1.11.1.min.js" %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/application.js" %}"></script>
   </body>
 </html>
