--- a/_chapters/chp14/django_ecommerce/templates/__base.html
+++ b/_chapters/chp14/django_ecommerce/templates/__base.html
@@ -70,5 +70,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/application.js" %}"></script>
+    {% block extrajs %}{% endblock %}
   </body>
 </html>
