--- a/_chapters/chp14/django_ecommerce/templates/__base.html
+++ b/_chapters/chp14/django_ecommerce/templates/__base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="mecApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
