--- a/_chapters/chp14/django_ecommerce/templates/djangular_polls/_polls.html
+++ b/_chapters/chp14/django_ecommerce/templates/djangular_polls/_polls.html
@@ -1,4 +1,4 @@
-<section class="info-box" id="polls" ng-app="pollsApp">
+<section class="info-box" id="polls">
   <div ng-controller='UserPollCtrl'>
     <h1>Poll: [[ poll.title ]]</h1>
     <div ng-repeat="item in poll.items">
