--- a/_chapters/chp14/django_ecommerce/templates/__base.html
+++ b/_chapters/chp14/django_ecommerce/templates/__base.html
@@ -66,10 +66,13 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{% static "js/jquery-1.11.1.min.js" %}"></script>
+    <script src="{% static "js/jquery-1.11.1.min.js" %}" type="text/javascript"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/application.js" %}"></script>
+    <script src="{% static "js/angular.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/application.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/userPollCtrl.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/loggedInCtrl.js" %}" type="text/javascript"></script>
     {% block extrajs %}{% endblock %}
   </body>
 </html>
