--- a/_chapters/chp14/django_ecommerce/templates/main/user.html
+++ b/_chapters/chp14/django_ecommerce/templates/main/user.html
@@ -1,7 +1,9 @@
 {% extends "__base.html" %}
 {% load staticfiles %}
 {% block content %}
-<div id="achievements" class="row member-page hide">
+<div ng-controller="LoggedInCtrl">
+<div id="achievements" class="row member-page"
+  ng-class="{hide: show_badges==false}">
   {% include "main/_badges.html" %}
 </div>
   <div class="row member-page">
@@ -19,8 +21,7 @@
      </div>
     </div>
   </div>
+</div>
 {% endblock %}
 {% block extrajs %}
-  <script src="{% static "js/angular.min.js" %}" type="text/javascript"></script>
-  <script src="{% static "js/userPollCtrl.js" %}" type="text/javascript"></script>
 {% endblock %}
