finished with work for admin chapter

--- a/django_ecommerce/templates/admin/payments/user/change_form.html
+++ b/django_ecommerce/templates/admin/payments/user/change_form.html
@@ -6,7 +6,7 @@
   {{ block.super }}
 {% endblock %}
 {% block object-tools-items %}
-<li class="dropdown" id="menuLogin" is-open="isopen">
+<li class="dropdown" id="menuReset" is-open="isopen">
 
             <a class="dropdown-toggle" href
               id="navLogin">Reset Password</a>
