--- a/_chapters/chp15/django_ecommerce/static/css/mec.css
+++ b/_chapters/chp15/django_ecommerce/static/css/mec.css
@@ -76,3 +76,15 @@ h1, .nav li, .navbar-brand {
   min-width: 100%;
   min-height: 100px;
 }
+
+input.ng-dirty.ng-valid {
+  border:1px solid Green;
+}
+input.ng-dirty.ng-invalid {
+  border:1px solid Red;
+}
+
+.custom-error {
+  color: #FF0000;
+  font-family: sans-serif;
+}
