--- a/_chapters/chp15/django_ecommerce/templates/payments/_cardform.html
+++ b/_chapters/chp15/django_ecommerce/templates/payments/_cardform.html
@@ -1,36 +1,36 @@
-<input type="hidden" name="last_4_digits" id="last_4_digits" value="{{ form.last_4_digits.value }}">
-<input type="hidden" name="stripe_token" id="stripe_token" value="{{ form.stripe_token.value }}">
-<noscript>
-  &lt;p&gt;
-  This form requires Javascript to use
-  &lt;/p&gt;
-</noscript>
-<div id="credit-card"{% if form.last_4_digits.value %} style="display: none"{% endif %}>
-<div id="credit-card-errors" style="display:none">
-<div class="alert-message block-message error" id="stripe-error-message"></div>
+<!--
+<input type="hidden" name="last_4_digits" id="last_4_digits">
+<input type="hidden" name="stripe_token" id="stripe_token">
+-->
+
+<div id="credit-card">
+<div id="credit-card-errors" ng-show="stripe_errormsg">
+<div class="custom-error" id="stripe-error-message">
+  [[ stripe_errormsg ]]</div>
 </div>
 
 <div class="clearfix">
   <label for="credit_card_number">Credit card number</label>
   <div class="input">
-    <input class="field" id="credit_card_number" type="text">
+    <input class="field" id="credit_card_number" type="text"
+    ng-model="card.number" required>
   </div>
 </div>
 <div class="clearfix">
-  <label for="cvv">Security code (CVC)</label>
+  <label for="cvc">Security code (CVC)</label>
   <div class="input">
-    <input class="small" id="cvv" type="text">
+    <input class="small" id="cvc" type="text" ng-model="card.cvc" required min=3>
   </div>
 </div>
 <div class="clearfix">
   <label for="expiry_date">Expiration date</label>
   <div class="input">
-    <select class="small" id="expiry_month">
+    <select class="small" id="expiry_month" ng-model="card.expMonth">
     {% for month in months %}
     <option value="{{ month }}"{% if soon.month == month %} selected{% endif %}>{{ month }}</option>
     {% endfor %}
-    </select><br/>
-    <select class="small" id="expiry_year">
+    </select>
+    <select class="small" id="expiry_year" ng-model="card.expYear">
     {% for year in years %}
     <option value="{{ year }}"{% if soon.year == year %} selected{% endif %}>{{ year }}</option>
     {% endfor %}
