updated angular form chp

--- a/_chapters/chp15/django_ecommerce/templates/payments/register.html
+++ b/_chapters/chp15/django_ecommerce/templates/payments/register.html
@@ -12,20 +12,11 @@
     <section class="container" ng-controller="registerCtrl">
       <form name="{{form.form_name}}" accept-charset="UTF-8" novalidate class="form-signin" role="form" ng-submit="register()">
         {% csrf_token %}
-        {% if form.is_bound and not form.is_valid %}
-          <div class="alert alert-{{error.tags}}"> <a class="close" data-dismiss="alert">×</a>
-            <div class="errors">
-              {% for field in form.visible_fields %}
-              {% for error in field.errors %}
-              <p>{{ field.label }}: {{ error }}</p>
-              {% endfor %}
-              {% endfor %}
-              {% for error in form.non_field_errors %}
-              <p>{{ error }}</p>
-              {% endfor %}
-            </div>
+        <div class="alert" ng-show="register_errors"> <a class="close" data-dismiss="alert">x</a>
+          <div class="errors">
+            <p ng-repeat="error in register_errors">[[ error ]]</p>
           </div>
-        {% endif %}
+        </div>
         {% for field in form.visible_fields %}
         {% include "payments/_field.html" %}
         {% endfor %}
