--- a/_chapters/chp15/django_ecommerce/templates/__base.html
+++ b/_chapters/chp15/django_ecommerce/templates/__base.html
@@ -73,6 +73,7 @@
     <script src="{% static "js/application.js" %}" type="text/javascript"></script>
     <script src="{% static "js/userPollCtrl.js" %}" type="text/javascript"></script>
     <script src="{% static "js/loggedInCtrl.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/registerCtrl.js" %}" type="text/javascript"></script>
     {% block extrajs %}{% endblock %}
   </body>
 </html>
