--- a/_chapters/chp09/django_ecommerce/templates/__base.html
+++ b/_chapters/chp09/django_ecommerce/templates/__base.html
@@ -65,6 +65,15 @@
 
     </div>
 
+
+
+    <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
+    <script type="text/javascript">
+      //<![CDATA[
+      Stripe.publishableKey = '{{ publishable }}';
+      //]]>
+    </script>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static "js/jquery-1.11.1.min.js" %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
