fixed issues with mongo mongo chapter

--- a/_chapters/chp16/django_ecommerce/static/css/mec.css
+++ b/_chapters/chp16/django_ecommerce/static/css/mec.css
@@ -88,3 +88,6 @@ input.ng-dirty.ng-invalid {
   color: #FF0000;
   font-family: sans-serif;
 }
+
+.angular-google-map-container { height: 400px; }
+
