--- a/_chapters/chp16/django_ecommerce/static/css/mec.css
+++ b/_chapters/chp16/django_ecommerce/static/css/mec.css
@@ -89,5 +89,7 @@ input.ng-dirty.ng-invalid {
   font-family: sans-serif;
 }
 
-.angular-google-map-container { height: 400px; }
+.angular-google-map-container {
+  height: 400px;
+}
 
