updates for admin chp

--- a/_chapters/chp17/django_ecommerce/templates/main/_announcements.html
+++ b/_chapters/chp17/django_ecommerce/templates/main/_announcements.html
@@ -8,7 +8,7 @@
       {% if a.vid %}
         {% video a.vid "medium" %}
       {% else %}
-        <img src="{% static 'img/'|add:a.img %}"/>
+        <img src="{{MEDIA_URL}}{{a.img}}"/>
       {% endif %}
     </div>
     <div > {{ a.info | safe }}</div>
