--- a/_chapters/chp11/django_ecommerce/templates/base.html
+++ b/_chapters/chp11/django_ecommerce/templates/base.html
@@ -1,117 +1,76 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <meta charset="utf-8">
-   <title>Your MVP</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="">
-   <meta name="author" content="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mos Eisley's Cantina</title>
 
-   <!-- Le styles -->
-   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-   <style>
+    <!-- Bootstrap -->
+    <link href= "{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <!-- custom styles -->
+    <link href= "{% static "css/mec.css" %}" rel="stylesheet">
 
-    body {
-     padding-top: 20px;
-     padding-bottom: 40px;
-    }
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+<body>
 
-    /* Custom container */
-    .container-narrow {
-     margin: 0 auto;
-     max-width: 700px;
-    }
-    .container-narrow > hr {
-     margin: 30px 0;
-    }
-
-    /* Main marketing message and sign up button */
-    .jumbotron {
-     margin: 60px 0;
-     text-align: center;
-    }
-    .jumbotron h1 {
-     font-size: 72px;
-     line-height: 1;
-    }
-    .jumbotron .btn {
-     font-size: 21px;
-     padding: 14px 24px;
-    }
-
-    /* Supporting marketing content */
-    .marketing {
-     margin: 60px 0;
-    }
-    .marketing p + h4 {
-     margin-top: 28px;
-    }
-
-   </style>
-   <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript"></script>
-    {% block extrahead %}
-    {% endblock %}
-   <script type="text/javascript">
-    $(function(){
-      {% block jquery %}
-      {% endblock %}
-    });
-   </script>
-    <script src="https://js.stripe.com/v1/" type="text/javascript"></script>
-    <script type="text/javascript">
-      //<![CDATA[
-      Stripe.publishableKey = '{{ publishable }}';
-      //]]>
-    </script>
-    <script src="{% get_static_prefix %}jquery.js" type="text/javascript"></script>
-    <script src="{% get_static_prefix %}application.js" type="text/javascript"></script>
- </head>
-
- <body>
-
-   <div class="container-narrow">
-
-      <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="/pages/about">About</a></li>
-          <li><a href="{% url 'contact' %}">Contact</a></li>
-          {% if user %}
-            <li><a href="{% url 'sign_out' %}">Logout</a></li>
-          {% else %}
-            <li><a href="{% url 'sign_in' %}">Login</a></li>
-            <li><a href="{% url 'register' %}">Register</a></li>
-          {% endif %}
-        </ul>
-        <h3><span class="fui-settings-16 muted">Your MVP!</span></h3>
-      </div>
-
-     <hr>
-
-    {% if messages %}
-    <div class="alert alert-success">
-      <div class="messages">
-      {% for message in messages %}
-        {{ message }}
-      {% endfor %}
-      </div>
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+  <div class="container">
+    <header class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{% url 'home' %}">Mos Eisley's Cantina</a>
+    </header>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="{% url 'home' %}">Home</a></li>
+        <li><a href="/pages/about">About</a></li>
+        <li><a href="{% url 'contact' %}">Contact</a></li>
+        {% if user %}
+          <li><a href="{% url 'sign_out' %}">Logout</a></li>
+        {% else %}
+          <li><a href="{% url 'sign_in' %}">Login</a></li>
+          <li><a href="{% url 'register' %}">Register</a></li>
+        {% endif %}
+      </ul>
     </div>
-   {% endif %}
+  </div>
+</nav>
 
-     <div class="container-narrow">
-       {% block content %}
-       {% endblock %}
-     </div>
+<div class="container">
 
-     <hr>
+  {% block content %}
+  {% endblock %}
 
-     <div class="footer">
-       <p>Copyright © 2014 <a href="http://www.yoursite.com">Your MVP</a>. Developed by <a href="http://realpython.com">Your Name Here</a>. Powered by Django.</P></p>
-     </div>
 
-   </div>
+  <hr class="featurette-divider">
 
- </body>
+  <footer>
+    <p class="pull-right"><a href="/#">Back to top</a></p>
+    <p class="pull-left">&copy; 2014 <a href="http://realpython.com">The Jedi Council</a></p> <p class="text-center"> &middot;  Powered by about 37 AT-AT Walkers, Python 3 and Django 1.9 &middot; </p>
+  </footer>
+</div>
+  <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
+  <script type="text/javascript">
+    //<![CDATA[
+    Stripe.publishableKey = '{{ publishable }}';
+    //]]>
+  </script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{% static "js/jquery-1.12.4.min.js" %}"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/application.js" %}"></script>
+  </body>
 </html>
