--- a/_chapters/chp11/django_ecommerce/templates/base.html
+++ b/_chapters/chp11/django_ecommerce/templates/base.html
@@ -1,76 +1,36 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mos Eisley's Cantina</title>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Bootstrap 101 Template</title>
 
-    <!-- Bootstrap -->
-    <link href= "{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-    <!-- custom styles -->
-    <link href= "{% static "css/mec.css" %}" rel="stylesheet">
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-<body>
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+      </head>
+      <body>
 
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-  <div class="container">
-    <header class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'home' %}">Mos Eisley's Cantina</a>
-    </header>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="/pages/about">About</a></li>
-        <li><a href="{% url 'contact' %}">Contact</a></li>
-        {% if user %}
-          <li><a href="{% url 'sign_out' %}">Logout</a></li>
-        {% else %}
-          <li><a href="{% url 'sign_in' %}">Login</a></li>
-          <li><a href="{% url 'register' %}">Register</a></li>
-        {% endif %}
-      </ul>
-    </div>
-  </div>
-</nav>
+        <h1>Hello, world!</h1>
 
-<div class="container">
-
-  {% block content %}
-  {% endblock %}
-
-
-  <hr class="featurette-divider">
-
-  <footer>
-    <p class="pull-right"><a href="/#">Back to top</a></p>
-    <p class="pull-left">&copy; 2014 <a href="http://realpython.com">The Jedi Council</a></p> <p class="text-center"> &middot;  Powered by about 37 AT-AT Walkers, Python 3 and Django 1.9 &middot; </p>
-  </footer>
-</div>
-  <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
-  <script type="text/javascript">
-    //<![CDATA[
-    Stripe.publishableKey = '{{ publishable }}';
-    //]]>
-  </script>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{% static "js/jquery-1.12.4.min.js" %}"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/application.js" %}"></script>
-  </body>
-</html>
+        <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
+        <script type="text/javascript">
+          //<![CDATA[
+          Stripe.publishableKey = '{{ publishable }}';
+          //]]>
+        </script>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="js/jquery-1-12-4.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/application.js"></script>
+      </body>
+    </html>
