--- a/_chapters/chp11/django_ecommerce/templates/base.html
+++ b/_chapters/chp11/django_ecommerce/templates/base.html
@@ -1,4 +1,5 @@
-    <!DOCTYPE html>
+ {% load static %}   
+<!DOCTYPE html>
     <html lang="en">
       <head>
         <meta charset="utf-8">
@@ -6,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bootstrap 101 Template</title>
 
-        <!-- Bootstrap -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+				<!-- Bootstrap -->
+				<link href= "{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,11 +27,11 @@
           Stripe.publishableKey = '{{ publishable }}';
           //]]>
         </script>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="js/jquery-1-12-4.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/application.js"></script>
+
+				<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+				<script src='{% static "js/jquery-1.12.4.min.js" %}'></script>
+				<!-- Include all compiled plugins (below), or include individual files as needed -->
+				<script src='{% static "js/bootstrap.min.js" %}'></script>
+				<script src='{% static "js/application.js" %}'></script>
       </body>
     </html>
