--- a/_chapters/chp11/django_ecommerce/templates/payments/register.html
+++ b/_chapters/chp11/django_ecommerce/templates/payments/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "__base.html" %}
 {% block content %}
 <div class="row">
   <div class="span6 columns">
@@ -26,7 +26,7 @@
         </div>
       {% endif %}
       {% for field in form.visible_fields %}
-      {% include "field.html" %}
+      {% include "payments/_field.html" %}
       {% endfor %}
       <div id="change-card" class="clearfix"{% if not form.last_4_digits.value %} style="display: none"{% endif %}>
         Card
@@ -35,7 +35,7 @@
           (<a href="#">change</a>)
         </div>
       </div>      
-      {% include "cardform.html" %}
+      {% include "payments/_cardform.html" %}
     </form>
   </div>
 </div>  
