got all exercises and everythign working for chp10

--- a/_chapters/chp11/django_ecommerce/static/css/mec.css
+++ b/_chapters/chp11/django_ecommerce/static/css/mec.css
@@ -36,3 +36,10 @@ h1, .nav li, .navbar-brand {
 .navbar-brand {
   height: 40px;
 }
+
+#darth_caption {
+  top: 0%;
+  left: 5%;
+  right: 60%;
+  text-align: left;
+}
