--- a/_chapters/chp11/django_ecommerce/templates/payments/sign_in.html
+++ b/_chapters/chp11/django_ecommerce/templates/payments/sign_in.html
@@ -1,34 +1,29 @@
 {% extends "__base.html" %}
+{% load staticfiles %}
+{% block extra_css %}
+  <link href="{% static 'css/signin.css' %}" rel="stylesheet">
+{% endblock %}
 {% block content %}
-  <div class="row">
-    <div class="span6 columns">
-    </div>
-  </div>
-  <div class="page-header">
-    <h1>Sign In</h1>
-  </div>
-  <div class="row">
-    <div class="span6 columns">
-      <form accept-charset="UTF-8" action="{% url 'sign_in' %}" class="form-stacked" method="post">{% csrf_token %}
-        {% if form.is_bound and not form.is_valid %}
-        <div class="alert-message block-message error">
-          <div class="errors">
-            {% for field in form.visible_fields %}
+   <div class="container">
+      <form accept-charset="UTF-8" action="{% url 'sign_in' %}" class="form-signin" role="form" method="post">
+      {% csrf_token %}
+      <h1 class="form-signin-heading">Sign in</h1>
+      {% if form.is_bound and not form.is_valid %}
+      <div class="alert-message block-message error">
+        <div class="errors">
+          {% for field in form.visible_fields %}
             {% for error in field.errors %}
-            <p>{{ field.label }}: {{ error }}</p>
+              <p>{{ field.label }}: {{ error }}</p>
             {% endfor %}
-            {% endfor %}
-            {% for error in form.non_field_errors %}
+          {% endfor %}
+          {% for error in form.non_field_errors %}
             <p>{{ error }}</p>
-            {% endfor %}
-          </div>
+          {% endfor %}
         </div>
-        {% endif %}
-        {% for field in form %}{% include "payments/_field.html" %}{% endfor %}
-        <div class="actions">
-          <input class="btn primary" name="commit" type="submit" value="Sign in">
-        </div>
+      </div>
+      {% endif %}
+      {% for field in form %}{% include "payments/_field.html" %}{% endfor %}
+        <input class="btn btn-lg btn-primary btn-lg" name="commit" type="submit" value="Sign in">
       </form>
-    </div>
-  </div>  
+   </div>
 {% endblock %}
