--- a/_chapters/appendixB/django_ecommerce/templates/__base.html
+++ b/_chapters/appendixB/django_ecommerce/templates/__base.html
@@ -1,7 +1,9 @@
 {% load static %}   
 <!DOCTYPE html>
 <html lang="en">
-	{% include '__head_and_nav.html' %}
+	{% include '__head.html' %}
+	<body>
+	{% include '__nav.html' %}
 
 		<div class="container">
 
