--- a/_chapters/chp12/django_ecommerce/templates/main/user.html
+++ b/_chapters/chp12/django_ecommerce/templates/main/user.html
@@ -4,6 +4,8 @@
   <div class="row member-page">
     <div class="col-sm-8">
       <div class="row">
+        {% include "main/_statusupdate.html" %}
+        {% include "main/_lateststatus.html" %}
       </div>
     </div>
     <div class="col-sm-4">
